--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "express api practice project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "node",
@@ -14,6 +14,9 @@
   "author": "stiffelbo",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2"
   }
 }
