--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "socket.io": "^2.2.0",
     "uuid": "^8.3.2"
   }
 }
