--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "express api practice project",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "set NODE_ENV=production && mocha \"./{,!(node_modules|client)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- npm test"
   },
   "keywords": [
     "node",
@@ -14,11 +16,17 @@
   "author": "stiffelbo",
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
+    "mocha": "^6.2.1",
+    "mongodb": "^3.3.2",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.7.1",
-    "nodemon": "^2.0.7",
-    "socket.io": "^2.2.0",
-    "uuid": "^8.3.2"
+    "nock": "^13.1.0",
+    "nodemon": "^1.19.1",
+    "onchange": "^6.1.0"
   }
 }
