--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.7.1",
     "nock": "^13.1.0",
     "nodemon": "^1.19.1",
-    "onchange": "^6.1.0"
+    "onchange": "^6.1.0",
+    "socket.io": "^2.2.0"
   }
 }
