--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "express api practice project",
   "main": "server.js",
+  "engines": {
+    "node": "10.23.3"
+  },
   "scripts": {
     "start": "nodemon server.js",
     "build": "cd client && yarn install && yarn build",
